correcting nu w3c validator errors

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How I Met Your Mother</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_downward_alt" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_downward_alt">
     <link href="css/allCSS.css" rel="stylesheet">
 </head>
 <body>
@@ -18,11 +18,13 @@
     <a class = "skip-link" href="#maincontent"> Skip to Main Content </a>
     <h2 class="sr-only"> Main Navigation </h2>
     <nav class = "nav-links">
+        <ul>
         <li> <a href="#background">Background</a> <span aria-hidden="true" class="material-symbols-outlined">arrow_downward_alt</span></li>
         <li> <a href="#premise">Premise</a> <span aria-hidden="true" class="material-symbols-outlined">arrow_downward_alt</span></li>
         <li> <a href="#production">Production</a> <span aria-hidden="true" class="material-symbols-outlined">arrow_downward_alt</span></li>
         <li> <a href="#castAndCharacters">Cast And Characters</a> <span aria-hidden="true" class="material-symbols-outlined">arrow_downward_alt</span></li>
         <li> <a href="#newsLetter">News Letter</a> <span aria-hidden="true" class="material-symbols-outlined">arrow_downward_alt</span></li>
+    </ul>
     </nav>
 
 
@@ -73,9 +75,10 @@ Episodes were generally shot over a three-day period in the Los Angeles-based So
 The theme song is a portion of "Hey Beautiful" by The Solids, of which Bays and Thomas are members. Episodes from season 1 generally started with the opening credits. A cold opening has been used since season 2. Viewers then occasionally see Ted's children on a couch and hear him talking to them, telling the story of how he met their mother. Alternatively, scenes from previous episodes or shots of New York City with Ted narrating over the top are shown. Thomas has stated that Future Ted is an unreliable narrator, since he is trying to tell a story that happened over 20 years earlier;[21] this has been a plot point in several episodes including "The Goat", "Oh Honey", "How I Met Everyone Else", and "The Mermaid Theory". Nevertheless, Thomas has also emphasized maintaining a coherent and consistent universe and trying to avoid continuity errors, a problem he noticed in other shows.[22]
 </p>
     </section>
-    <section id="castAndCharacters">
+    <section id="castAndCharacters">            
+        <h2> Cast And Characters </h2>
         <table>
-            <caption> Cast And Characters </caption>
+
             <thead>
                 <tr>
                     <th scope="col"> Characters </th>
@@ -86,19 +89,19 @@ The theme song is a portion of "Hey Beautiful" by The Solids, of which Bays and 
                 <tr>
                     <td> Josh Radnor/Ted Mosby </td>
                     <td> 
-                        <img src= "img/Josh Radnor.jpg" alt= "Josh Radnor Pic"> 
+                        <img src= "img/Josh-Radnor.jpg" alt= "Josh Radnor Pic"> 
                     </td>
                 </tr>
                 <tr>
                     <td> Jason Segel/Marshall Eriksen </td>
                     <td> 
-                        <img src= "img/Jason Segel.jpg" alt= "Jason Segel Pic"> 
+                        <img src= "img/Jason-Segel.jpg" alt= "Jason Segel Pic"> 
                     </td>
                 </tr>
                 <tr>
                     <td> Cobie Smulders/Robin Scherbatsky </td>
                     <td> 
-                        <img src= "img/Cobie Smulders.jpg" alt= "Cobie Smulders Pic"> 
+                        <img src= "img/Cobie-Smulders.jpg" alt= "Cobie Smulders Pic"> 
                     </td>
                 </tr>
                 <tr>
@@ -110,7 +113,7 @@ The theme song is a portion of "Hey Beautiful" by The Solids, of which Bays and 
                 <tr>
                     <td> Alyson Hannigan/Lily Aldrin </td>
                     <td> 
-                        <img src= "img/Alyson Haniigan.jpg" alt= "Alyson Hannigan Pic"> 
+                        <img src= "img/Alyson-Haniigan.jpg" alt= "Alyson Hannigan Pic"> 
                     </td>
                 </tr>
             </tbody>
@@ -121,7 +124,7 @@ The theme song is a portion of "Hey Beautiful" by The Solids, of which Bays and 
         <h2> News Letter </h2>
         <p> <mark>Sign up for news about the show!</mark> </p>
         <form id="newsForm" method ="post">
-            <fieldsetq>
+            <fieldset>
                 <label for="your-email">
                     Enter your email:
                     <input type="email" id="your-email" required>
