--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <a class = "skip-link" href="#maincontent"> Skip to Main Content </a>
     <h2 class="sr-only"> Main Navigation </h2>
     <nav class = "nav-links">
-        <ul>
+    <ul>
+        <!-- Using Google material icons as arrows -->
         <li> <a href="#background">Background</a> <span aria-hidden="true" class="material-symbols-outlined">arrow_downward_alt</span></li>
         <li> <a href="#premise">Premise</a> <span aria-hidden="true" class="material-symbols-outlined">arrow_downward_alt</span></li>
         <li> <a href="#production">Production</a> <span aria-hidden="true" class="material-symbols-outlined">arrow_downward_alt</span></li>
@@ -31,7 +32,7 @@
     <main id="maincontent">
         <section id="background">
             <h2> How I Met Your Mother</h2>
-            <p>
+            <p> 
             <strong>How I Met Your Mother</strong> (often abbreviated as <abbr title ="How I met Your Mother">HIMYM</abbr>) is an American sitcom created by Craig Thomas and Carter Bays for CBS. The series, which aired from September 2005 to March 2014, follows main character Ted Mosby and his group of friends in New York City's Manhattan. As a frame story, Ted (in 2030) recounts to his daughter Penny and son Luke the events from September 2005 to May 2013 that led to him meeting their mother.
             </p>
             <p>
